# api/controllers/player.js
@@ -1,7 +1,19 @@
 'use strict';
 
 const { loggerPlayer } = require('../../config/logger');
-const { findPlayerStats } = require('../helpers/player');
+const { findPlayers, findPlayerStats } = require('../helpers/player');
+
+const getPlayers = (req, res) => {
+	loggerPlayer.verbose('controllers/player/getPlayers', 'request');
+
+	findPlayers()
+		.then((data) => {
+			res.json(data);
+		})
+		.catch((error) => {
+			res.status(error.status || 400).json({ message: error.message });
+		});
+};
 
 const getPlayerStats = (req, res) => {
 	const player_name = req.swagger.params.player_name.value;
@@ -17,5 +29,6 @@ const getPlayerStats = (req, res) => {
 };
 
 module.exports = {
+	getPlayers,
 	getPlayerStats
 };
